--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
   region: "us-east-2"
   app: "docker-react"
   bucket_name: "elasticbeanstalk-us-east-2-873417030420"
-  buket_path: "docker-react"
+  bucket_path: "docker-react"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
