--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
   app: "docker-react"
-  env: "docker-react-env"
+  env: "Dockerreact-env"
   bucket_name: "elasticbeanstalk-us-east-2-873417030420"
   bucket_path: "docker-react"
   on:
